--- a/my-app/src/components/Navbar/styles.css
+++ b/my-app/src/components/Navbar/styles.css
@@ -35,3 +35,13 @@
 a{
     text-decoration: none;
 }
+
+.header-menu-avatar{
+    width: 45px;
+    height: 45px;
+    border-radius: 50px;
+}
+
+.header-menu-avatar-container{
+    box-shadow: 2px black;
+}
